--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./src/persistence/db.json:/data/db.json
+      - ./src/persistence:/data
   app:
     image: node
     ports:
@@ -14,3 +14,4 @@ services:
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
+
